--- a/conda_envs/sindbad_preprocess.yml
+++ b/conda_envs/sindbad_preprocess.yml
@@ -1,9 +1,9 @@
 name: sindbad_preprocess
 channels:
+  - numba/label/dev
   - anaconda
-  - defaults
   - conda-forge
-  - bioconda
+  - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - alabaster=0.7.12=py_0
@@ -21,31 +21,39 @@ dependencies:
   - backports.functools_lru_cache=1.6.1=py_0
   - blas=1.0=mkl
   - bleach=3.3.0=pyh44b312d_0
+  - bokeh=2.3.0=py38h06a4308_0
   - bottleneck=1.3.2=py38heb32a55_1
   - brotlipy=0.7.0=py38h8df0ef7_1001
   - ca-certificates=2020.12.5=ha878542_0
   - certifi=2020.12.5=py38h578d9bd_1
   - cffi=1.14.5=py38h261ae71_0
   - chardet=4.0.0=py38h578d9bd_1
+  - click=7.1.2=pyhd3eb1b0_0
   - cloudpickle=1.6.0=py_0
   - cryptography=3.2.1=py38h7699a38_0
   - cycler=0.10.0=py_2
+  - cytoolz=0.11.0=py38h7b6447c_0
+  - dask=2021.2.0=pyhd3eb1b0_0
+  - dask-core=2021.2.0=pyhd3eb1b0_0
   - dbus=1.13.18=hb2f20db_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
   - diff-match-patch=20200713=py_0
+  - distributed=2021.2.0=py38h06a4308_0
   - docutils=0.16=py38_1
   - entrypoints=0.3=pyhd8ed1ab_1003
   - expat=2.2.10=he6710b0_2
   - flake8=3.8.4=py_0
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.10.4=h5ab3b9f_0
+  - fsspec=0.8.3=py_0
   - future=0.18.2=py38_1
   - glib=2.56.2=hd408876_0
   - gmp=6.2.1=h2531618_2
   - gmpy2=2.0.8=py38hd5f6e3b_3
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
+  - heapdict=1.0.1=py_0
   - icu=58.2=he6710b0_3
   - idna=2.10=pyh9f0ad1d_0
   - imagesize=1.2.0=py_0
@@ -87,7 +95,8 @@ dependencies:
   - libuuid=1.0.3=h1bed415_2
   - libxcb=1.14=h7b6447c_0
   - libxml2=2.9.10=hb55368b_3
-  - llvmlite=0.34.0=py38h269e1b5_4
+  - llvmlite=0.35.0rc3=py38hf484d3e_0
+  - locket=0.2.1=py38h06a4308_1
   - lz4-c=1.9.2=he1b5a44_3
   - markupsafe=1.1.1=py38h8df0ef7_2
   - matplotlib=3.3.4=py38h578d9bd_0
@@ -101,6 +110,7 @@ dependencies:
   - mpc=1.1.0=h10f8cd9_1
   - mpfr=4.0.2=hb69a4c5_1
   - mpmath=1.1.0=py38_0
+  - msgpack-python=1.0.2=py38hff7bd54_1
   - nbclassic=0.2.6=pyhd8ed1ab_0
   - nbclient=0.5.2=pyhd8ed1ab_0
   - nbconvert=6.0.7=py38h578d9bd_3
@@ -109,7 +119,6 @@ dependencies:
   - nest-asyncio=1.4.3=pyhd8ed1ab_0
   - notebook=6.2.0=py38h578d9bd_0
   - numba=0.51.2=py38h0573a6f_1
-  - numpy-base=1.19.2=py38hfa32c7d_0
   - numpydoc=1.1.0=py_0
   - olefile=0.46=pyh9f0ad1d_1
   - openssl=1.1.1h=h516909a_0
@@ -117,6 +126,7 @@ dependencies:
   - pandoc=2.11.4=h7f98852_0
   - pandocfilters=1.4.2=py_1
   - parso=0.7.0=py_0
+  - partd=1.1.0=py_0
   - pathtools=0.1.2=py_1
   - pcre=8.44=he6710b0_0
   - pexpect=4.8.0=pyh9f0ad1d_2
@@ -146,6 +156,7 @@ dependencies:
   - python_abi=3.8=1_cp38
   - pytz=2021.1=pyhd3eb1b0_0
   - pyxdg=0.26=py_0
+  - pyyaml=5.3.1=py38h7b6447c_1
   - pyzmq=20.0.0=py38h1d1b12f_1
   - qdarkstyle=2.8.1=py_0
   - qt=5.9.7=h5867ecd_1
@@ -178,13 +189,17 @@ dependencies:
   - sqlite=3.33.0=h62c20be_0
   - sympy=1.7.1=py38h06a4308_0
   - tbb=2020.3=hfd86e86_0
+  - tblib=1.7.0=py_0
   - terminado=0.9.2=py38h578d9bd_0
   - testpath=0.4.4=py_0
   - threadpoolctl=2.1.0=pyh5ca1d4c_0
+  - timezonefinder=5.2.0=pyh050c7b8_0
   - tk=8.6.10=hbc83047_0
   - toml=0.10.1=py_0
+  - toolz=0.11.1=pyhd3eb1b0_0
   - tornado=6.1=py38h25fe258_0
   - traitlets=5.0.5=py_0
+  - typing_extensions=3.7.4.3=pyha847dfd_0
   - ujson=4.0.1=py38he6710b0_0
   - urllib3=1.26.3=pyhd8ed1ab_0
   - watchdog=0.10.3=py38_0
@@ -198,18 +213,20 @@ dependencies:
   - yaml=0.2.5=h7b6447c_0
   - yapf=0.30.0=py_0
   - zeromq=4.3.3=h58526e2_3
+  - zict=2.0.0=pyhd3eb1b0_0
   - zipp=3.4.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h6597ccf_2
   - pip:
     - asciitree==0.3.3
-    - dask==2021.2.0
+    - cftime==1.4.1
     - fasteners==0.16
+    - netcdf4==1.5.6
     - numcodecs==0.7.3
     - numpy==1.20.1
     - pandas==1.2.2
-    - pyyaml==5.4.1
     - tqdm==4.57.0
     - zarr==2.6.1
-prefix: /home/simon/anaconda3/envs/sindbad_preprocess
+    - -e /Net/Groups/BGI/work_3/biomass/BIOMASCAT/scripts/data/fluxcom
+prefix: /Net/Groups/BGI/work_3/sindbad/sindbad-preproc/conda_envs
 
