handle gap-filling at once, include oneflux sw_in_pot

--- a/configuration/cliff/cliffin_exp_config.json
+++ b/configuration/cliff/cliffin_exp_config.json
@@ -1,7 +1,7 @@
 {
     "OutPath": "/Net/Groups/BGI/work_3/cliff/input/fluxnetBGI2021_siteCube-v0.03_iter-5/",
     "diagnostic_plots": true,
-    "njobs_parallel": 30,
+    "njobs_parallel": 60,
     "sites_toRun1": [
         "AT-Neu"
     ],
@@ -19,7 +19,8 @@
         "monthly",
         "annual"
     ],
-    "do_gap_fill": false,
+    "allow_extraction_errors": false,
+    "sel_gapfills": "none",
     "gap_fill": {
         "clim": {
             "target": "",
